smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/mixins/invalid-mixins-on-resource.smithy
// Parse error at line 5, column 15 near `with`: Expected: '{', but found 'w'
$version: "2"
namespace com.foo

resource Test with X {}
